--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -52,7 +52,9 @@ title: 'User FAQs'
         <Frame caption="How to manually add an NFT to a Metamask wallet">
             <img src="/user-guide/images/support/user-faq/manually add nft.gif"/>
         </Frame>
-        If the NFT still isn't appearing, you might need to manually import the NFT. Please refer to your wallet provider's documentation for instructions.
+        If the NFT still isn't appearing, you might need to manually import the NFT. Please refer to your wallet provider's documentation for instructions on how to manually 
+        import an NFT. You can find your NFT's details (contract address and unique token ID) on your NFT's OpenSea view, which can be accessed by clicking the 'Marketplace' 
+        button under your NFT ticket or pass on the Moongate portal.
     </Accordion>
     <Accordion title="I can't log into the Moongate Verify mobile application.">
         The Moongate Verify mobile application is intended for event hosts – you shouldn't have to use it! As a general user, please instead visit your 
