--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -54,7 +54,7 @@ title: 'User FAQs'
         </Frame>
         If the NFT still isn't appearing, you might need to manually import the NFT. Please refer to your wallet provider's documentation for instructions on how to manually 
         import an NFT. You can find your NFT's details (contract address and unique token ID) on your NFT's OpenSea view, which can be accessed by clicking the 'Marketplace' 
-        button under your NFT ticket or pass on the Moongate portal.
+        button under your NFT ticket/pass on the Moongate portal.
     </Accordion>
     <Accordion title="I can't log into the Moongate Verify mobile application.">
         The Moongate Verify mobile application is intended for event hosts – you shouldn't have to use it! As a general user, please instead visit your 
