--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -48,13 +48,12 @@ title: 'User FAQs'
         2. **You haven't configured your wallet to display NFTs on the same chain that the NFT ticket/membership is deployed on.**
         Moongate often deploys on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains, so try adding those. We recommend referring to your wallet
         provider's documentation for instructions. As an example, here's [how to add a new chain on Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8).
-        Refresh your wallet after adding the new chain and the NFT ticket/membership should appear.
+        Afterwards, you'll need to manually manually import the NFT. Please refer to your wallet provider's documentation for instructions on how to manually 
+        import an NFT. You can find your NFT's details (contract address and unique token ID) on your NFT's OpenSea view, which can be accessed by clicking the 'Marketplace' 
+        button under your NFT ticket/pass on the Moongate portal.
         <Frame caption="How to manually add an NFT to a Metamask wallet">
             <img src="/user-guide/images/support/user-faq/manually add nft.gif"/>
         </Frame>
-        If the NFT still isn't appearing, you might need to manually import the NFT. Please refer to your wallet provider's documentation for instructions on how to manually 
-        import an NFT. You can find your NFT's details (contract address and unique token ID) on your NFT's OpenSea view, which can be accessed by clicking the 'Marketplace' 
-        button under your NFT ticket/pass on the Moongate portal.
     </Accordion>
     <Accordion title="I can't log into the Moongate Verify mobile application.">
         The Moongate Verify mobile application is intended for event hosts – you shouldn't have to use it! As a general user, please instead visit your 
