Moonfarmer guide update

--- a/user-guide/moonfarmer/moonfarmer-guide.mdx
+++ b/user-guide/moonfarmer/moonfarmer-guide.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'MoonFarmer - How it Works'
 ---
+<Tip>💡 MoonFarmer is not currently supported on mobile devices. Please use a computer for the best experience.</Tip>
 
 ## I. How can I become a Moonfarmer?
 Everyone is eligible. Just head to our site [here](https://app.moongate.id/) and earn points by completing tasks and interacting with our partners. 
