--- a/user-guide/managing-wallet/manually-add-nft.mdx
+++ b/user-guide/managing-wallet/manually-add-nft.mdx
@@ -1,3 +1,13 @@
 ---
 title: 'Manually Adding an NFT'
 ---
+<Tip>Even if you do not manually add a ticket/membership pass NFT to your wallet, they will still be detected on Moongate's portal in order to ensure a smooth check-in process.)</Tip>
+
+If you're using an external wallet with Moongate, you'll likely need to manually import your NFTs to your wallet in order to view them there. 
+
+Afterwards, you'll need to manually manually import the NFT. Please refer to your wallet provider's documentation for instructions on how to manually 
+import an NFT. You can find your NFT's details (contract address and unique token ID) on your NFT's OpenSea view, which can be accessed by clicking the 'Marketplace' 
+button under your NFT ticket/pass on the Moongate portal.
+<Frame caption="How to manually add an NFT to a Metamask wallet">
+    <img src="/user-guide/images/managing-wallet/manually-add-nft/manually add nft.gif"/>
+</Frame>
