--- a/user-guide/managing-wallet/manually-add-nft.mdx
+++ b/user-guide/managing-wallet/manually-add-nft.mdx
@@ -1,11 +1,22 @@
 ---
 title: 'Manually Adding an NFT'
 ---
-<Tip>Even if you do not manually add a ticket/membership pass NFT to your wallet, they will still be detected on Moongate's portal in order to ensure a smooth check-in process.)</Tip>
+<Tip>Even if you do not manually add a ticket/membership pass NFT from an event/membership powered by Moongate to your wallet, they will 
+still be detected on Moongate's portal in order to ensure a smooth check-in process. 
+If you purchased such an NFT from the secondary market however, you might need to manually add it.</Tip>
 
 If you're using an external wallet with Moongate, you'll likely need to manually import your NFTs to your wallet in order to view them there. 
 
-Afterwards, you'll need to manually manually import the NFT. Please refer to your wallet provider's documentation for instructions on how to manually 
+<Steps>
+    <Step title="Configure your wallet to support the same chain that the NFT ticket/membership is deployed on">
+        Moongate often deploys on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains, so try adding those. We recommend referring to your wallet
+        provider's documentation for instructions. As an example, here's [how to add a new chain on Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8).
+    </Step>
+    <Step title="Find your NFT's details on OpenSea"></Step>
+    <Step title="Manually add your NFT to your wallet"></Step>
+</Steps>
+
+Please refer to your wallet provider's documentation for instructions on how to manually 
 import an NFT. You can find your NFT's details (contract address and unique token ID) on your NFT's OpenSea view, which can be accessed by clicking the 'Marketplace' 
 button under your NFT ticket/pass on the Moongate portal.
 <Frame caption="How to manually add an NFT to a Metamask wallet">
