--- a/user-guide/managing-wallet/manually-add-nft.mdx
+++ b/user-guide/managing-wallet/manually-add-nft.mdx
@@ -12,13 +12,14 @@ If you're using an external wallet with Moongate, you'll likely need to manually
         Moongate often deploys on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains, so try adding those. We recommend referring to your wallet
         provider's documentation for instructions. As an example, here's [how to add a new chain on Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8).
     </Step>
-    <Step title="Find your NFT's details on OpenSea"></Step>
-    <Step title="Manually add your NFT to your wallet"></Step>
+    <Step title="Find your NFT's details on OpenSea">
+        You can find your NFT's details (contract address and unique token ID) on your NFT's OpenSea view, which can be accessed by clicking the 'Marketplace' 
+        button under your NFT ticket/pass on the Moongate portal.
+    </Step>
+    <Step title="Manually add your NFT to your wallet">
+        Please refer to your wallet provider's documentation for instructions on how to manually import an NFT.
+        <Frame caption="How to manually add an NFT to a Metamask wallet">
+            <img src="/user-guide/images/managing-wallet/manually-add-nft/manually add nft.gif"/>
+        </Frame>
+    </Step>
 </Steps>
-
-Please refer to your wallet provider's documentation for instructions on how to manually 
-import an NFT. You can find your NFT's details (contract address and unique token ID) on your NFT's OpenSea view, which can be accessed by clicking the 'Marketplace' 
-button under your NFT ticket/pass on the Moongate portal.
-<Frame caption="How to manually add an NFT to a Metamask wallet">
-    <img src="/user-guide/images/managing-wallet/manually-add-nft/manually add nft.gif"/>
-</Frame>
