--- a/user-guide/managing-wallet/manually-add-nft.mdx
+++ b/user-guide/managing-wallet/manually-add-nft.mdx
@@ -15,9 +15,10 @@ If you're using an external wallet with Moongate, you'll likely need to manually
     <Step title="Find your NFT's details on OpenSea">
         You can find your NFT's details (contract address and unique token ID) on your NFT's OpenSea view, which can be accessed by clicking the 'Marketplace' 
         button under your NFT ticket/pass on the Moongate portal.
+        <img src="/user-guide/images/managing-wallet/manually-add-nft/find details.gif"/>
     </Step>
     <Step title="Manually add your NFT to your wallet">
-        Please refer to your wallet provider's documentation for instructions on how to manually import an NFT.
+        Please refer to your wallet provider's documentation for instructions on how to manually import an NFT. Below is an example using Metamask, but the process may differ depending on your wallet provider.
         <Frame caption="How to manually add an NFT to a Metamask wallet">
             <img src="/user-guide/images/managing-wallet/manually-add-nft/manually add nft.gif"/>
         </Frame>
