--- a/user-guide/managing-wallet/manually-add-nft.mdx
+++ b/user-guide/managing-wallet/manually-add-nft.mdx
@@ -1,18 +1,20 @@
 ---
 title: 'Manually Adding an NFT'
 ---
-<Tip>Even if you do not manually add a ticket/membership pass NFT from an event/membership powered by Moongate to your wallet, they will 
-still be detected on Moongate's portal in order to ensure a smooth check-in process. 
-If you purchased such an NFT from the secondary market however, you might need to manually add it.</Tip>
+<Tip>If you purchased a ticket/membership pass NFT _directly_ from Moongate and sent it to your external wallet during the check-out process, 
+they will still be available on Moongate's portal even if you do not manually add the NFT to your wallet. This ensures a smooth check-in process.
+</Tip>
 
-If you're using an external wallet with Moongate, you'll likely need to manually import your NFTs to your wallet in order to view them there. 
+If you're using an external wallet with Moongate, you'll likely need to manually import your NFTs to your wallet in order to view them. 
 
 <Steps>
     <Step title="Configure your wallet to support the same chain that the NFT ticket/membership is deployed on">
         Moongate often deploys on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains, so try adding those.
         
-        We recommend referring to your wallet provider's documentation for instructions. As an example, here's [how to add a new chain 
-        on Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8).
+        Please refer to your wallet provider's documentation for instructions on how to add a new chain to your wallet. Below is an example using [Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8), but the process may differ depending on your wallet provider.
+        <Frame caption="How to manually add an NFT to a Metamask wallet">
+            <img src="/user-guide/images/managing-wallet/manually-add-nft/add chain.gif"/>
+        </Frame>       
     </Step>
     <Step title="Find your NFT's details on OpenSea">
         You can find your NFT's details (contract address and unique token ID) on your NFT's OpenSea view, which can be accessed by clicking the 'Marketplace' 
