--- a/user-guide/managing-wallet/manually-add-nft.mdx
+++ b/user-guide/managing-wallet/manually-add-nft.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Manually Adding an NFT'
 ---
-<Tip>If you purchased a ticket/membership pass NFT _directly_ from Moongate and sent it to your external wallet during the check-out process, 
+<Tip>If you purchased a ticket/membership pass NFT directly from Moongate and sent it to your external wallet during the check-out process, 
 they will still be available on Moongate's portal even if you do not manually add the NFT to your wallet. This ensures a smooth check-in process.
 </Tip>
 
