--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -47,7 +47,7 @@ title: 'User FAQs'
         Simply log into the [Moongate user portal](app.moongate.id) and check the 'Pass' page.
         2. **You haven't configured your wallet to display NFTs on the same chain that the NFT ticket/membership is deployed on.**
         Moongate often deploys on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains, so try adding those. We recommend referring to your wallet
-        provider's documentation for instructions. As an example, here'sS [how to add a new chain on Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8).
+        provider's documentation for instructions. As an example, here's [how to add a new chain on Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8).
         3. **Your external wallet isn't detecting the NFT ticket/membership**
     </Accordion>
     <Accordion title="I can't log into the Moongate Verify mobile application.">
