Issue narrowed down

--- a/user-guide/managing-wallet/manually-add-nft.mdx
+++ b/user-guide/managing-wallet/manually-add-nft.mdx
@@ -1,10 +1,17 @@
 ---
 title: 'Manually Adding an NFT'
 ---
-
 If you're using an external wallet with Moongate, you'll likely need to manually import your NFTs to your wallet in order to view them. 
 
 <Steps>
+    <Step title="Configure your wallet to support the same chain that the NFT ticket/membership is deployed on">
+        Moongate often deploys on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains.
+        
+        Please refer to your wallet provider's documentation for instructions on how to add a new chain to your wallet. Below is an example using [Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8), but the process may differ depending on your wallet provider.
+        <Frame caption="How to add a new chain to a Metamask wallet">
+            <img src="/user-guide/images/managing-wallet/manually-add-nft/add chain.gif"/>
+        </Frame>       
+    </Step>
     <Step title="Find your NFT's details on OpenSea">
         You can find your NFT's details (contract address and unique token ID) on your NFT's OpenSea view, which can be accessed by clicking the 'Marketplace' 
         button under your NFT ticket/pass on the Moongate portal.
