--- a/user-guide/managing-wallet/manually-add-nft.mdx
+++ b/user-guide/managing-wallet/manually-add-nft.mdx
@@ -1,8 +1,12 @@
 ---
 title: 'Manually Adding an NFT'
 ---
+<Tip>
+    If you purchased a ticket/membership pass NFT directly from Moongate and sent it to your external wallet during the check-out process, they will still be available on Moongate's portal even if you do not manually add the NFT to your wallet. This ensures a smooth check-in process.
+</Tip>
+
 If you're using an external wallet with Moongate, you'll likely need to manually import your NFTs to your wallet in order to view them. 
-Fr?
+
 <Steps>
     <Step title="Configure your wallet to support the same chain that the NFT ticket/membership is deployed on">
         Moongate often deploys on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains.
