--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -10,7 +10,24 @@ description: 'Gain custody of and manage your automatically generated wallet.'
     Moongate has partnered with Particle Wallet to create non-custodial wallets. Moongate has no administrative control over your wallet and its contents, and as such is unable to manage your wallet on your behalf. 
     We recommend contacting [Particle Wallet support](https://discord.com/invite/FB44yXKnRK) if you require additional support.
 </Warning>
-
+<Accordion title="View NFTs in Your Non-Custodial Wallet">
+    <Steps>
+        <Step title="Log in to Moongate">
+        </Step>
+        <Step title="Open your wallet">
+            Open the user settings panel then click ‘Manage’ to be taken to your non-custodial wallet.
+            <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/manage assets button.gif"/>
+        </Step>
+        <Step title="Select the correct chain">
+            Make sure the correct chain is selected. 
+            <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/add chain.gif"/>
+        </Step>
+        <Step title="View your NFT">
+            Click 'NFT' and locate the target NFT. Click it to inspect it. From here you can view your NFT's attributes, details, and even send it elsewhere.
+            <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/view nft.gif"/>
+        </Step>
+    </Steps>
+</Accordion>
 <Accordion title="Claiming Your Non-Custodial Wallet">
     <Steps>    
         <Step title="Access your non-custodial wallet">
