--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -45,8 +45,7 @@ title: 'User FAQs'
         <Steps>
             <Step title="You are checking a wallet which you haven't connected to Moongate.">
                 This is often the case if you signed up to Moongate using email or Google login, as we automatically create a non-custodial wallet for users who sign up via these methods. 
-                To view your NFT in your non-custodial wallet, log in to Moongate, open the user settings panel, click ‘Manage’ to be taken to your non-custodial wallet, make sure the correct chain is selected, and then click "NFT."
-                <img src="/user-guide/images/support/user-faq/view-non-custodial-wallet.gif"/>
+                To view your NFT in your non-custodial wallet, please refer to the [instructions here](/user-guide/managing-wallet/manage-non-custodial-wallet).
             </Step>
             <Step title="You haven't configured your wallet to display NFTs on the same chain that the NFT ticket/membership is deployed on.">
                 Moongate often deploys on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains, so try adding those. We recommend referring to your wallet
