--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -27,9 +27,10 @@ title: 'User FAQs'
         Additionally, make sure that you are not browsing in Incognito mode.
     </Accordion>
     <Accordion title="I bought a ticket/membership via Moongate. Where is my ticket/membership?">
-        Your ticket or membership is stored as an NFT in your blockchain wallet. You can check your NFT at our [user web portal](https://app.moongate.id).
-
-        The “Pass” section shows all the tickets/memberships you have acquired using the Moongate platform.        
+        Your ticket or membership is stored as an NFT in your blockchain wallet. You can check your NFT at our [user web portal](https://app.moongate.id). The “Pass” section shows all the tickets/memberships you have acquired using the Moongate platform.
+        
+        If you received your ticket/membership NFT in your own external wallet, please follow our guide [here](/user-guide/managing-wallet/manually-add-nft) 
+        on how to manually add it to your wallet. Otherwise, your ticket/membership NFT will be in your [automatically created wallet](/user-guide/managing-wallet/manage-non-custodial-wallet).     
     </Accordion>
     <Accordion title="I purchased a ticket administered by Moongate on the secondary market. How will my ticket be authenticated?">
         Assuming the wallet containing your newly purchased ticket is connected to your Moongate account, you can follow our [check-in guide](/user-guide/the-basics/user-check-in-guide) as usual to successfully check into the event.
