--- a/user-guide/managing-wallet/manually-add-nft.mdx
+++ b/user-guide/managing-wallet/manually-add-nft.mdx
@@ -4,6 +4,9 @@ title: 'Manually Adding an NFT'
 <Tip>
     If you purchased a ticket/membership pass NFT directly from Moongate and sent it to your external wallet during the check-out process, they will still be available on Moongate's portal even if you do not manually add the NFT to your wallet. This ensures a smooth check-in process.
 </Tip>
+<Tip>
+    Not using an external wallet with Moongate but still can't locate your ticket/membership NFTs? Check out our guide on managing your [non-custodial wallet](/user-guide/managing-wallet/manage-non-custodial-wallet).
+</Tip>
 
 If you're using an external wallet with Moongate, you'll likely need to manually import your NFTs to your wallet in order to view them. 
 
