--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Managing Your Non-Custodial Wallet'
-description: 'Gain custody of and manage your automatically generated wallet.'
+description: 'View your NFTs in, gain custody of, and manage your automatically generated wallet.'
 ---
 <Info>
     This guide is intended for users whose wallets are the non-custodial variety automatically created by Moongate. If you are 
