--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -5,6 +5,9 @@ description: 'Distribute free NFTs to a targeted audience.'
 <Tip>
     The airdropping process is identical for both tickets and memberships. Moongate supports airdropping via email addresses.
 </Tip>
+<Info>
+    Please note that airdropping a ticket/membership enables the recipient(s) to claim it for free, regardless of whether the ticket/membership is paid or not. If your application still requires recipients to pay, we recommend gating by NFT/Email/Wallet instead.
+</Info>
 
 <Steps>
     <Step title="Sign into the Moongate Merchant Portal">
@@ -14,8 +17,6 @@ description: 'Distribute free NFTs to a targeted audience.'
     </Step>
     <Step title="Choose the ticket type or membership tier to be airdropped">
         Go to the "③ Tickets" or "③ Tiers" page within the chosen event/membership page respectively, and locate the ticket type or membership tier that you want to airdrop.
-        
-        Please note that airdropping a ticket/membership enables the recipient(s) to claim it for free, regardless of whether the ticket/membership is paid or not. If your application still requires recipients to pay, we recommend gating by NFT/Email/Wallet instead.
     </Step>
     <Step title="Choose an email input method">
         Click the "Airdrop" button on the target ticket type/membership tier.
