--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -48,5 +48,11 @@ title: 'Transferring a Ticket/Membership'
         Confirm and sign the transaction. The gas fee will be deducted from your account and the NFT will then be transferred to the 
         specified address. Please note that the transaction may take some time to process due to blockchain confirmation times.
         <img src="/user-guide/images/managing-wallet/transferring-nft/confirm transaction.png"/>
+        <Info>
+            If not already done so, your recipient will have to connect their wallet to Moongate in order to "unlock" their ticket/membership.
+            If they do not connect their wallet to Moongate, the platform will be unable to detect their ticket/membership NFT and will be
+            unable to issue check-in credentials, complicating the check-in process. Follow [these instructions](/user-guide/managing-wallet/connecting-wallet) to connect an external wallet to Moongate, 
+            then follow [these steps](/user-guide/managing-wallet/manually-add-nft) on manually adding an NFT to a wallet.
+        </Info>
     </Step>    
 </Steps>
