--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -51,7 +51,9 @@ title: 'Transferring a Ticket/Membership'
         <Info>
             If not already done so, your recipient will have to connect their wallet to Moongate in order to "unlock" their ticket/membership.
             If they do not connect their wallet to Moongate, the platform will be unable to detect their ticket/membership NFT and will be
-            unable to issue check-in credentials, complicating the check-in process. Follow [these instructions](/user-guide/managing-wallet/connecting-wallet) to connect an external wallet to Moongate, 
+            unable to issue check-in credentials, complicating the check-in process.
+            
+            Follow [these instructions](/user-guide/managing-wallet/connecting-wallet) to connect an external wallet to Moongate, 
             then follow [these steps](/user-guide/managing-wallet/manually-add-nft) on manually adding an NFT to a wallet if applicable.
         </Info>
     </Step>    
