--- a/docs/welcome.mdx
+++ b/docs/welcome.mdx
@@ -4,10 +4,10 @@ title: 'Welcome'
 <CardGroup cols={2}>
     <Card title="Our Vision" href="/docs/our-vision">  
     </Card>
-    <Card title="Moongate Protocol" href="/docs/our-vision">  
+    <Card title="Moongate Protocol" href="/docs/moongate-protocol">  
     </Card>
-    <Card title="Ecosystem" href="/docs/our-vision">  
+    <Card title="Ecosystem" href="/docs/ecosystem">  
     </Card>
-    <Card title="Whitepaper" href="/docs/our-vision">  
+    <Card title="Whitepaper" href="/docs/whitepaper">  
     </Card>
 </CardGroup>
