--- a/docs/welcome.mdx
+++ b/docs/welcome.mdx
@@ -1,5 +1,5 @@
 ---
-title: '🌝 Welcome'
+title: '🌝 Moongate Docs'
 ---
 <CardGroup cols={2}>
     <Card title="Our Vision" href="/docs/our-vision">  
