--- a/docs/welcome.mdx
+++ b/docs/welcome.mdx
@@ -8,6 +8,6 @@ title: '🌝 Moongate Docs'
     </Card>
     <Card title="Ecosystem" href="/docs/ecosystem">  
     </Card>
-    <Card title="Whitepaper" href="/docs/whitepaper">  
+    <Card title="Moongate "Whitepaper"" href="/docs/whitepaper">  
     </Card>
 </CardGroup>
