--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -49,7 +49,7 @@ title: 'Transferring a Ticket/Membership'
         specified address. Please note that the transaction may take some time to process due to blockchain confirmation times.
         <img src="/user-guide/images/managing-wallet/transferring-nft/confirm transaction.png"/>
         <Info>
-            If not already done so, your recipient will have to connect their wallet to Moongate in order to "unlock" their ticket/membership.
+            If they haven't already done so, your recipient will have to connect their wallet to Moongate in order to "unlock" their ticket/membership.
             If they do not connect their wallet to Moongate, the platform will be unable to detect their ticket/membership NFT and will be
             unable to issue check-in credentials, complicating the check-in process.
             
