--- a/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
+++ b/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
@@ -5,16 +5,16 @@ title: 'Purchasing and Redeeming Tickets/Memberships'
     <Step title="Visit the event/membership page">
         On the target ticket/membership landing page, click "Get Ticket" or "Get Membership." You will be taken to your cart, 
         where you can select the tickets/membership passes you'll be purchasing.
-        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/landing page.avif"/>
+        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/landing page.png"/>
     </Step>
     <Step title="Enter discount/redemption/referral code (optional)">
         Enter a discount/redemption/referral code, if any, and click "Apply." Any applicable discounts or restricted ticket/membership 
         types will then be unlocked.
-        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/discount code.avif"/>
+        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/discount code.gif"/>
     </Step>
     <Step title="Select ticket/membership type and quantity">
         Select the ticket/membership type and quantity of tickets/membership passes to purchase. When ready, click "Next."
-        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/select type quantity.avif"/>
+        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/select type quantity.png"/>
         <Info>
             NOTE: customers are limited to a single ticket/membership type per transaction. You can purchase multiple tickets/membership 
             passes of the same type in a single transaction. To purchase a different ticket/membership type, please place another order 
@@ -23,7 +23,7 @@ title: 'Purchasing and Redeeming Tickets/Memberships'
     </Step>
     <Step title="Fill out required information">
         Fill out the required information for each ticket on the checkout page.
-        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/fill info.avif"/>
+        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/fill info.png"/>
         <Warning>
             **If you are purchasing ticket(s) on behalf of someone else, please enable the "Buy for others" toggle and provide their email 
             address.**
