--- a/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
+++ b/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
@@ -16,7 +16,7 @@ title: 'Purchasing and Redeeming Tickets/Memberships'
         Select the ticket/membership type and quantity of tickets/membership passes to purchase. When ready, click "Next."
         <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/select type quantity.png"/>
         <Info>
-            NOTE: customers are limited to a single ticket/membership type per transaction. You can purchase multiple tickets/membership 
+            Customers are limited to a single ticket/membership type per transaction. You can purchase multiple tickets/membership 
             passes of the same type in a single transaction. To purchase a different ticket/membership type, please place another order 
             for that type.
         </Info>
