update on connect wallet to opensea

--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -61,4 +61,32 @@ description: 'View your NFTs in, gain custody of, and manage your automatically 
             <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/orinoco flow.gif"/>
         </Step>
     </Steps>
+
+</Accordion>
+<Accordion title="Signing into OpenSea With Your Wallet">
+    <Steps>        
+        <Step title="Select the WalletConnect option on OpenSea">
+            <img src="user-guide/images/managing-wallet/manage-non-custodial-wallet/walletconnectonopensea.png"/>
+        </Step>
+        <Step title="Copy WalletConnect link">
+            The link should now be in your clipboard.
+            <img src="user-guide/images/managing-wallet/manage-non-custodial-wallet/copywalletcode.png"/>
+        </Step>
+        <Step title="Assess your wallet on your Moongate profile">     
+            Click on ‘Manage’ to be taken to your non-custodial wallet. The Particle Network page should automatically open.
+            <img src="user-guide/images/managing-wallet/manage-non-custodial-wallet/managewallet.png"/>
+        </Step>
+        <Step title="Paste the copied WalletConnect code on Particle Network">
+            Select the ‘Scan QR code’ icon on the top right corner of the Particle Network page and then paste the previously copied code.
+            <img src="user-guide/images/managing-wallet/manage-non-custodial-wallet/pastewalletcode.png"/>
+        </Step>
+        <Step title="Agree to connect your wallet">
+            <img src="user-guide/images/managing-wallet/manage-non-custodial-wallet/connectonpn.png"/>
+            <img src="user-guide/images/managing-wallet/manage-non-custodial-wallet/confirmonpn.png"/>
+        </Step>
+         <Step title="Confirm on OpenSea">
+            Go back to the OpenSea page and click 'Accept and Sign'. You have now successfully connected your non-custodial wallet to OpenSea.
+            <img src="user-guide/images/managing-wallet/manage-non-custodial-wallet/acceptonopensea.png"/>
+        </Step>
+    </Steps>
 </Accordion>
