--- a/user-guide/moonfarmer/moonfarmer-guide.mdx
+++ b/user-guide/moonfarmer/moonfarmer-guide.mdx
@@ -27,6 +27,7 @@ It’s straightforward. There are several ways to earn points:
 
 ## IV. Buy tickets and promote campaign to earn points
 When you click into the “Buy Tickets” and “Promote Campaign” task, you will be directed to our Discover Page. Engage with the events to earn points. 
+*Points will only be rewarded for paid tickets, not free tickets.
 <img src="/user-guide/images/moonfarmer/moonfarmer-guide/highlighted event share.png"/>
 
 You can then check the points you earned at the Quest page by clicking into the specific task.
