--- a/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
+++ b/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
@@ -1,43 +1,72 @@
 ---
 title: 'Purchasing and Redeeming Tickets/Memberships'
 ---
-<Steps>
-    <Step title="Visit the event/membership page">
-        On the target ticket/membership landing page, click "Get Ticket" or "Get Membership." You will be taken to your cart, 
-        where you can select the tickets/membership passes you'll be purchasing.
-        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/landing page.png"/>
-    </Step>
-    <Step title="Enter discount/redemption/referral code (optional)">
-        Enter a discount/redemption/referral code, if any, and click "Apply." Any applicable discounts or restricted ticket/membership 
-        types will then be unlocked.
-        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/discount code.gif"/>
-    </Step>
-    <Step title="Select ticket/membership type and quantity">
-        Select the ticket/membership type and quantity of tickets/membership passes to purchase. When ready, click "Next."
-        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/select type quantity.png"/>
-        <Info>
-            Customers are limited to a single ticket/membership type per transaction. You can purchase multiple tickets/membership 
-            passes of the same type in a single transaction. To purchase a different ticket/membership type, please place another order 
-            for that type.
-        </Info>
-    </Step>
-    <Step title="Fill out required information">
-        Fill out the required information for each ticket on the checkout page.
-        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/fill info.png"/>
-        <Warning>
-            **If you are purchasing ticket(s) on behalf of someone else, please enable the "Buy for others" toggle and provide their email 
-            address.**
-            
-            Due to the nature of NFTs and the blockchain, transferring a ticket(s) from your account to theirs at a later time 
-            will incur a transfer fee. Providing their email address during this step will bypass this fee.
-        </Warning>
-    </Step>
-    <Step title="Select payment method">
-        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/payment.png"/>
-        Select your payment method and accept the Moongate Terms of Sale and Privacy Policy.
-    </Step>
-    <Step title="Complete checkout">
-        Click 'Checkout' when ready, and follow the instructions from your payment processor to complete your purchase. Please allow a 
-        few minutes for your NFT ticket/membership pass to appear in your portal and wallet.
-    </Step>
-</Steps>
+You can redeem tickets/memberships through purchasing or airdrop. 
+
+<Accordion title="Purchasing your ticket/memberships">
+    <Steps>
+        <Step title="Visit the event/membership page">
+            On the target ticket/membership landing page, click "Get Ticket" or "Get Membership." You will be taken to your cart, 
+            where you can select the tickets/membership passes you'll be purchasing.
+            <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/landing page.png"/>
+        </Step>
+        <Step title="Enter discount/redemption/referral code (optional)">
+            Enter a discount/redemption/referral code, if any, and click "Apply." Any applicable discounts or restricted ticket/membership 
+            types will then be unlocked.
+            <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/discount code.gif"/>
+        </Step>
+        <Step title="Select ticket/membership type and quantity">
+            Select the ticket/membership type and quantity of tickets/membership passes to purchase. When ready, click "Next."
+            <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/select type quantity.png"/>
+            <Info>
+                Customers are limited to a single ticket/membership type per transaction. You can purchase multiple tickets/membership 
+                passes of the same type in a single transaction. To purchase a different ticket/membership type, please place another order 
+                for that type.
+            </Info>
+        </Step>
+        <Step title="Fill out required information">
+            Fill out the required information for each ticket on the checkout page.
+            <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/fill info.png"/>
+            <Warning>
+                **If you are purchasing ticket(s) on behalf of someone else, please enable the "Buy for others" toggle and provide their email 
+                address.**
+                
+                Due to the nature of NFTs and the blockchain, transferring a ticket(s) from your account to theirs at a later time 
+                will incur a transfer fee. Providing their email address during this step will bypass this fee.
+            </Warning>
+        </Step>
+        <Step title="Select payment method">
+            <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/payment.png"/>
+            Select your payment method and accept the Moongate Terms of Sale and Privacy Policy.
+        </Step>
+        <Step title="Complete checkout">
+            Click 'Checkout' when ready, and follow the instructions from your payment processor to complete your purchase. Please allow a 
+            few minutes for your NFT ticket/membership pass to appear in your portal and wallet.
+        </Step>
+    </Steps>
+</Accordion>
+
+<Accordion title="Redeeming your airdropped NFT ticket/memberships">
+    <Steps>
+        <Step title="Claim your airdrop with email">
+            When you have an airdropped ticket/membership, you will receive an email. 
+            img;airdropemail
+            <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/airdropemail.png"/>
+            Click on 'Redeem Ticket Now'. It will bring you to the portal with the redeem code automatically entered.
+            img;portalredeem
+            <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/portalredeem.png"/>
+        </Step>
+        <Step title="A confirmation email will be sent when airdrop is successful">
+            Check your email for the ticket QR code and NFT. 
+            img;ticketemail
+            <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/ticketemail.png"/>
+            img;nftemail
+            <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/nftemail.png"/>
+        </Step>
+         <Step title="Check your NFT on the 'PASS' page in the portal">
+            Your airdropped NFT can be checked on the marketplace.
+            img;marketplaceportal
+            <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/marketplaceportal.png"/>
+        </Step>
+     </Steps>
+</Accordion>
