--- a/check-in/check-in-guide.mdx
+++ b/check-in/check-in-guide.mdx
@@ -41,6 +41,7 @@ title: 'Check-in Guide'
             <img src="/images/check-in-guide/manualcheckin.png"/>
             <img src="/images/check-in-guide/manualcheckinconfirm.png"/>
             You can check the attendance on the 'Attendance' tab.
+        </Step>
      </Steps>
 </Accordion>
 
