--- a/check-in/check-in-guide.mdx
+++ b/check-in/check-in-guide.mdx
@@ -1,32 +1,31 @@
 ---
 title: 'Check-in Guide'
 ---
-<Accordion title="Check-in with the Moongate Verify app">
-    ### Before the Event
-    Download the Moongate Verify app – you will use this app to check your guests in.
-    - [Apple iOS](https://apps.apple.com/app/moongate-verify/id6444063664) app
-    - [Google Play Store](https://play.google.com/store/apps/details?id=com.moongate.verify) app
-    ### During the Event: Check-in Guide
-    <Steps>
-        <Step title="Log into the Moongate Verify app">
-            You'll need your event's access code, which is located in the corresponding event's dashboard page in the portal.
-            <img src="/images/check-in-guide/code location.png"/>
-        </Step>
-        <Step title="Choose the target event">
-        </Step>
-        <Step title="Scan the attendee's QR code(s).">
-            Attendees’ QR codes can be located from:
-            - Confirmation email (search for an email from “contact@moongate.id” with subject line of “Your Ticket for [Event]”)
-            - Moongate user portal after login - https://app.moongate.id/
-        </Step>
-        <Step title="Check the attendee's eligibility">
-            Verification results:
-            <img src="/images/check-in-guide/verification msgs.png"/>
-        </Step>
-    </Steps>
-</Accordian>
+## I. Check-in with the Moongate Verify App
+**Before the Event**
+Download the Moongate Verify app – you will use this app to check your guests in.
+- [Apple iOS](https://apps.apple.com/app/moongate-verify/id6444063664) app
+- [Google Play Store](https://play.google.com/store/apps/details?id=com.moongate.verify) app
+**During the Event: Check-in Guide**
+<Steps>
+    <Step title="Log into the Moongate Verify app">
+        You'll need your event's access code, which is located in the corresponding event's dashboard page in the portal.
+        <img src="/images/check-in-guide/code location.png"/>
+    </Step>
+    <Step title="Choose the target event">
+    </Step>
+    <Step title="Scan the attendee's QR code(s).">
+        Attendees’ QR codes can be located from:
+        - Confirmation email (search for an email from “contact@moongate.id” with subject line of “Your Ticket for [Event]”)
+        - Moongate user portal after login - https://app.moongate.id/
+    </Step>
+    <Step title="Check the attendee's eligibility">
+        Verification results:
+        <img src="/images/check-in-guide/verification msgs.png"/>
+    </Step>
+</Steps>
 
-<Accordion title="Manual Check-in">
+## II. Manual Check-in
     <Steps>
         <Step title="Open your event on Moongate merchant portal">
             Go to the dashboard section 
@@ -40,7 +39,6 @@ title: 'Check-in Guide'
             You can check the attendance on the 'Attendance' tab.
         </Step>
      </Steps>
-</Accordion>
 
 ### For attendees yet to claim their ticket:
 For customers who have not yet claimed their ticket (for instance, if their tickets were purchased on their behalf by a friend), they must redeem their ticket using the redemption email that was sent to them by Moongate (noreply@moongate.id).
