--- a/check-in/check-in-guide.mdx
+++ b/check-in/check-in-guide.mdx
@@ -1,6 +1,8 @@
 ---
 title: 'Check-in Guide'
 ---
+You can check-in attendees with the Moongate Verify App or manually on our portal. We recommend using the app. 
+
 ## I. Check-in with the Moongate Verify App
 **Before the Event**
 Download the Moongate Verify app – you will use this app to check your guests in.
