--- a/check-in/check-in-guide.mdx
+++ b/check-in/check-in-guide.mdx
@@ -5,9 +5,12 @@ You can check-in attendees with the Moongate Verify App or manually on our porta
 
 ## I. Check-in with the Moongate Verify App
 **Before the Event**
-Download the Moongate Verify app – you will use this app to check your guests in.
+
+Download the Moongate Verify app 
+– you will use this app to check your guests in.
 - [Apple iOS](https://apps.apple.com/app/moongate-verify/id6444063664) app
 - [Google Play Store](https://play.google.com/store/apps/details?id=com.moongate.verify) app
+
 **During the Event: Check-in Guide**
 <Steps>
     <Step title="Log into the Moongate Verify app">
