docs: add documentations

--- a/admin-settings/team-management.mdx
+++ b/admin-settings/team-management.mdx
@@ -11,6 +11,10 @@ description: 'Grant team members access to your event/membership program/benefit
     <Step title="Add team members">
         Click 'Add New', input the email address of the target team member, and then 'Add.'
         <img src="/images/admin-settings/team-management/add member.gif"/>
-        Please note that Admin is the only role available at this time. 
+    </Step>
+    <Step title="Deleting a team member">
+        Click the trash bin icon next to the 'Role' column of the target team member under the 'Action' column.
+        <img src="images/admin-settings/team-management/delete member.png"/>
+        Please note that only Owners and Admins, excluding Moderators, can delete members. 
     </Step>
 </Steps>
