--- a/benefits/createbenefit.mdx
+++ b/benefits/createbenefit.mdx
@@ -65,9 +65,9 @@ title: 'Creating a Benefit'
     <img src= "/images/benefits/create-benefit/responses.gif"/>
   </Step>
   <Step title="Specify payment options">
-    Select a payment option if applicable. Moongate supports both credit cards and crypto options. **You will not automatically receive payouts, so please contact us if you will be collecting payment for your benefit campaign.**
+    Select a payment option if applicable. Moongate supports credit cards, crypto, and PayPal. **You will not automatically receive payouts, so please contact us if you will be collecting payment for your benefit campaign.**
     <img src= "/images/benefits/create-benefit/payment.png"/>
-  </Step>
+</Step>
   <Step title="Launch your benefit campaign and benefit(s)">
     Once you have finalized your benefit campaign and benefit details, click "Publish" to launch your benefit campaign.
   </Step>
