--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -74,7 +74,7 @@ title: 'Creating Membership Tiers'
         <Info>
             For more information on selecting a blockchain and contract type, please consult section "[7. Technical Information]()."
         </Info>
-        Select a payment option if applicable. Moongate supports both credit cards and crypto options. Please contact us if you will be collecting payment for your event.
+        Select a payment option if applicable. Moongate supports credit cards, PayPal, and crypto options. **Please contact us if you will be collecting payment for your event.**
         <img src="/images/creating-campaign/membership/creating tier/Payment Options.png"/>    
     </Step>
     <Step title="Publish your event">
