--- a/customer-insights/sales-attendance-data.mdx
+++ b/customer-insights/sales-attendance-data.mdx
@@ -18,3 +18,27 @@ title: 'View Sales & Attendance Data'
         <img src="/images/customer-insights/sales-attendance-data/detailed transaction.gif"/>
     </Step>
 </Steps>
+
+---
+Download Sales, Attendance & Email Sent Data
+---
+
+<Steps>
+    <Step title="Navigate to the 'Report' Panel">
+        <img src="images/customer-insights/sales-attendance-data/report panel.gif"/>
+    </Step>
+    <Step title="Select Event">
+        Click the dropdown menu under the 'All' label to select a specific event or choose 'All Events' to include all available events.
+        <img src="images/customer-insights/sales-attendance-data/selecting event.gif"/>
+    </Step>
+
+    <Step title="Select Report Type">
+        Choose the type of report you want to generate. You can select one or multiple options from Sales, Attendance, and Email Sent by checking the corresponding boxes.
+        <img src="images/customer-insights/sales-attendance-data/selecting report type.gif"/>
+    </Step>
+
+    <Step title="Download the Report">
+        Once you have selected the desired event and report type(s), click the 'Download Selected' button to download the reports in CSV format for data analytics.
+        <img src="images/customer-insights/sales-attendance-data/download reports.gif"/>
+    </Step>
+</Steps>
