--- a/tech-info/blockchain-contract-info.mdx
+++ b/tech-info/blockchain-contract-info.mdx
@@ -3,7 +3,7 @@ title: 'Blockchain & Contract Information'
 ---
 When finalizing event/membership settings, you will select the blockchain and contract type for tickets and memberships associated with your event or program. If you are unsure about these contract settings, we recommended using the default values (Polygon blockchain and ERC721 contract type.)
 ### Blockchain Options: 
-- Moongate allows merchants to mint their event tickets & membership programs on the **Arbitrum**, **BNB Chain**, **Polygon**, or **Avalanche** blockchains.
+- Moongate allows merchants to mint their event tickets & membership programs on the **Arbitrum**, **BNB Chain**, **Polygon**, **Avalanche**, **Base**, or **Scroll** blockchains.
 
 ### Contract Options:
 - **ERC721**: users will be able to transfer the ticket/membership to another user.
