--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -114,7 +114,7 @@ title: 'Creating Tickets'
     <Info>
         For more information on selecting a blockchain and contract type, please consult section "7. Technical Information."
     </Info>
-    Select a payment option if applicable. Moongate supports both credit cards and crypto options. **Please contact us if you will be collecting payment for your event.**
+    Select a payment option if applicable. Moongate supports credit cards, PayPal, and crypto options. **Please contact us if you will be collecting payment for your event.**
     <img src="/images/creating-campaign/ticketing/creating tickets/Payment Options.png"/>
   </Step>
   <Step title="Publish your event">
