docs: update documentation

--- a/admin-settings/collecting-user-information.mdx
+++ b/admin-settings/collecting-user-information.mdx
@@ -3,11 +3,19 @@ title: 'Collecting User Information'
 ---
 
 ## Check-out Form
-> For events with check-out form questions, the transaction notification email sent to the organizer will include the user's responses to the check-out form.
+<Note>
+    For events with check-out form questions, the transaction notification email sent to the organizer will include the user's responses to the check-out form.
+</Note>
 
 <Steps>
     <Step title="User fill in check-out form questions">
         <img src="images/admin-settings/collecting-user-information/user filled form.png"/>
+    </Step>
+    <Step title="Obtained Ticket After Checkout">
+        <img src="images/admin-settings/collecting-user-information/receive ticket.png"/>
+    </Step>
+    <Step title="Process Confirmation">
+        <img src="images/admin-settings/collecting-user-information/process confirmation.png"/>
     </Step>
     <Step title="Organizer receive email notification">
         <img src="images/admin-settings/collecting-user-information/email notification.png"/>
