--- a/admin-settings/on-site-registration.mdx
+++ b/admin-settings/on-site-registration.mdx
@@ -1,7 +1,9 @@
 ---
 title: 'On-Site Registration'
-description: 'Organizers need to request permission to enable on-site registration for their events. Once requested, our team will handle the addition of this feature.'
 ---
+<Note>
+Organizers need to request permission to enable on-site registration for their events. Once requested, our team will handle the addition of this feature.
+</Note>
 
 <Steps>
     <Step title="Navigate to the 'Event dashboard' panel">
