--- a/admin-settings/team-management.mdx
+++ b/admin-settings/team-management.mdx
@@ -15,6 +15,8 @@ description: 'Grant team members access to your event/membership program/benefit
     <Step title="Deleting a team member">
         Click the trash bin icon next to the 'Role' column of the target team member under the 'Action' column.
         <img src="images/admin-settings/team-management/delete member.png"/>
+        <Warning>
         Please note that only Owners and Admins, excluding Moderators, can delete members. 
+        </Warning>
     </Step>
 </Steps>
