--- a/creating-campaign/ticketing/require-approval.mdx
+++ b/creating-campaign/ticketing/require-approval.mdx
@@ -1,26 +1,69 @@
 ---
 title: 'Require Approval'
-description: 'Event tickets supported with an approval functionality, allows organizers to create tickets that can only be granted by the organizer.'
 ---
+<Tip>
+Event tickets supported with an approval functionality, allows organizers to create tickets that can only be granted by the organizer.
+</Tip>
 
-To create a campaign ticket that requires approval, ensure it meets the following criteria:
+<AccordionGroup>
+    <Accordion title="Creating a Require Approval Campaign Ticket">
+        <Note>
+            A Require Approval ticket must have the following parameters:
+            * **Ticket Price:** Free
+            * **Maximum Purchase per user:** 1
+            * **Restrictions:** Users cannot buy tickets for others
+            * **Maximum Purchase per Transaction:** 1
+        </Note>
+    
+        <Steps titleSize="h3">
+            <Step title="Ticket Price">
+                <img src="images/creating-campaign/ticketing/require approval/price.png"/>
+            </Step>
+            <Step title="Advanced Options Setting">
+                <img src="images/creating-campaign/ticketing/require approval/options require approval.png"/>
+            </Step>
+            <Step title="Ticket Displayed">
+                <img src="images/creating-campaign/ticketing/require approval/approval required.gif"/>
+            </Step>
+        </Steps>  
+    </Accordion>
 
-- **Ticket Price:** Free
-- **Maximum Purchase per user:** 1
-- **Restrictions:** Users cannot buy tickets for others
-- **Maximum Purchase per Transaction:** 1
-
-<img src="images/creating-campaign/ticketing/require approval/price.png"/>
-<img src="images/creating-campaign/ticketing/require approval/options require approval.png"/>
-
-<Info>
-> **Standard Operating Procedure for Approval Tickets:**
-> 
-> 1. When a user purchases a ticket that requires approval, they will receive an email indicating that the ticket is pending.
-> 2. NFT airdrop will be pending until approval.
-> 3. Organizers can review the ticket in the portal, where they will see options in the "approval" column.
-> 4. The organizer can either approve or reject the ticket:
->     - **If Rejected:** A second confirmation will appear, followed by a toast notification. Once confirmed, the user will receive an email informing them of the rejection.
->     - **If Approved:** A double confirmation and toast notification will appear for the organizer. The NFT Ticket will be airdropped to the user's account only after approval.
-> 5. When the ticket is approved, the user will receive an email notification confirming their ticket approval and the NFT Ticket will be airdropped to their account. The user can then use the approved ticket for the event.
-</Info>
+    <Accordion title="Ticket Purchasement Operation">
+        <Steps titleSize="h3">
+            <Step title="Purchasing Ticket">
+                <img src="images/creating-campaign/ticketing/require approval/ticket purchasement.gif"/>
+            </Step>
+            <Step title="Pending ticket approval request email to user">
+            <img src="images/creating-campaign/ticketing/require approval/pending approval.png"/>
+            </Step>
+            <Step title="Pending NFT Airdrop Status">
+            <img src="images/creating-campaign/ticketing/require approval/NFT Airdrop.gif"/>
+            </Step>
+            <Step title="Merchant Approval Decision">
+                <Card icon="circle" iconType="sharp-solid" color="red">
+                    <Steps>
+                        <Step title="Rejected Ticket">
+                            <img src="images/creating-campaign/ticketing/require approval/rejected status.gif"/>
+                        </Step>
+                        <Step title="Email Sent to User">
+                            <img src="images/creating-campaign/ticketing/require approval/rejected email.png"/>
+                        </Step>
+                    </Steps>
+                </Card>
+                <Card icon="circle" iconType="sharp-solid" color="green">
+                    <Steps>
+                        <Step title="Approved Ticket">
+                            <img src="images/creating-campaign/ticketing/require approval/approved status.gif"/>
+                        </Step>
+                        <Step title="Email Sent to User">
+                            <img src="images/creating-campaign/ticketing/require approval/approved email.png"/>
+                        </Step>
+                        <Step title="Approved Airdrop Status">
+                            <img src="images/creating-campaign/ticketing/require approval/airdrop approved.png"/>
+                        </Step>
+                    </Steps>
+                </Card>
+            </Step>
+        </Steps>
+    </Accordion>
+</AccordionGroup>
